--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -118,6 +118,14 @@
 .social {
   display: flex;
   justify-content: space-between;
+  max-width: 22rem;
+  margin: auto;
+}
+
+.icon {
+  width: 3rem;
+  height: 3rem;
+  gap: 1rem;
 }
 
 .code {
